--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "@prisma/client": "^6.11.1",
     "cors": "^2.8.5",
@@ -20,5 +19,14 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LMJerez/backend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/LMJerez/backend/issues"
+  },
+  "homepage": "https://github.com/LMJerez/backend#readme",
+  "description": ""
 }
